# test-python

./: .copier-answers.yml  .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  cliff.toml  mkdocs.yml  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  issue.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: continuous-deployment.yml  continuous-integration.yml  docs.yml  periodic.yml  release.yml
docs/: api.md  contributing.md  index.md
src/test_python/: README.md  __init__.py  cli.py
tests/: conftest.py  test_test_python.py
